# telegramBot

./: .gitignore  main.py  notifier.py  products.csv  pyproject.toml  requirements.txt  scraper2.py
scraperDefinido/: main.py  notifier.py  scraper.py  scraper2.py  scraper3.py
scraperDinamico/: main.py  main2.py
